--- a/package.json
+++ b/package.json
@@ -1,19 +1,53 @@
 {
   "name": "cerebral-module-signal-store",
-  "version": "0.0.3",
+  "version": "0.0.0-semantically-released",
   "description": "Time travel enabler for Cerebral application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "standard",
+    "test": "nodeunit tests",
+    "coverage": "istanbul cover nodeunit tests",
+    "postcoverage": "cat ./coverage/lcov.info | coveralls",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cerebral/cerebral-module-signal-store.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Christian Alfoni <christianalfoni@gmail.com>",
+  "contributors": [
+    "Aleksey Guryanov <gurianov@gmail.com>"
+  ],
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/cerebral/cerebral-module-signal-store/issues"
   },
-  "homepage": "https://github.com/cerebral/cerebral-module-signal-store#readme"
+  "homepage": "https://github.com/cerebral/cerebral-module-signal-store#readme",
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "ghooks": {
+      "commit-msg": "validate-commit-msg"
+    }
+  },
+  "release": {
+    "analyzeCommits": "./sr-prerelease.js"
+  },
+  "devDependencies": {
+    "cerebral": "^0.33.1",
+    "commitizen": "^2.5.0",
+    "conventional-changelog": "0.0.17",
+    "coveralls": "^2.11.6",
+    "cz-customizable": "^2.7.0",
+    "ghooks": "^1.0.3",
+    "istanbul": "^0.4.2",
+    "nodeunit": "^0.9.1",
+    "semantic-release": "^4.3.5",
+    "standard": "^5.4.1",
+    "validate-commit-msg": "^1.1.1"
+  },
+  "peerDependencies": {
+    "cerebral": "^0.33.1"
+  }
 }
