--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "analyzeCommits": "./sr-prerelease.js"
   },
   "devDependencies": {
-    "cerebral": "^0.33.31",
+    "cerebral": "^0.33.33",
     "commitizen": "^2.5.0",
     "conventional-changelog": "0.0.17",
     "coveralls": "^2.11.6",
@@ -48,7 +48,7 @@
     "validate-commit-msg": "^1.1.1"
   },
   "peerDependencies": {
-    "cerebral": "^0.33.8 || ^0.34.0-0"
+    "cerebral": "^0.33.31 || ^0.34.0-rc.4"
   },
   "dependencies": {
     "uuid": "^2.0.1"
