--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ after_success:
   - 'curl -Lo travis_after_all.py https://git.io/travis_after_all'
   - python travis_after_all.py
   - 'export $(cat .to_export_back) &> /dev/null'
-  - npn run coverage
+  - npm run coverage
   - npm run semantic-release
 branches:
   except:
