--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "validate-commit-msg": "^2.6.1"
   },
   "peerDependencies": {
-    "cerebral": "^0.35.0-0"
+    "cerebral": "^0.35.0-0 || ^1.0.0"
   },
   "dependencies": {
     "uuid": "^2.0.1"
