--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "cerebral-module-signal-store",
-  "version": "0.2.0-rc.2",
+  "version": "0.2.1",
   "description": "Time travel enabler for Cerebral application",
   "main": "index.js",
   "scripts": {
     "pretest": "standard",
     "test": "nodeunit tests",
     "coverage": "nyc --reporter=lcov --reporter=text npm test",
-    "postcoverage": "cat ./coverage/lcov.info | coveralls",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "postcoverage": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cerebral/cerebral-module-signal-store.git"
+    "url": "git+https://github.com/cerebral-legacy/cerebral-module-signal-store.git"
   },
   "author": "Christian Alfoni <christianalfoni@gmail.com>",
   "contributors": [
@@ -20,32 +19,22 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cerebral/cerebral-module-signal-store/issues"
+    "url": "https://github.com/cerebral-legacy/cerebral-module-signal-store/issues"
   },
-  "homepage": "https://github.com/cerebral/cerebral-module-signal-store#readme",
+  "homepage": "https://github.com/cerebral-legacy/cerebral-module-signal-store#readme",
   "config": {
     "commitizen": {
       "path": "node_modules/cz-customizable"
-    },
-    "ghooks": {
-      "commit-msg": "validate-commit-msg"
     }
-  },
-  "release": {
-    "analyzeCommits": "./sr-prerelease.js"
   },
   "devDependencies": {
     "cerebral": "^0.35.0-0",
     "commitizen": "^2.5.0",
-    "conventional-changelog": "0.0.17",
     "coveralls": "^2.11.11",
     "cz-customizable": "^2.7.0",
-    "ghooks": "^1.3.2",
     "nodeunit": "^0.9.1",
     "nyc": "^7.0.0",
-    "semantic-release": "^4.3.5",
-    "standard": "^7.1.2",
-    "validate-commit-msg": "^2.6.1"
+    "standard": "^7.1.2"
   },
   "peerDependencies": {
     "cerebral": "^0.35.0-0 || ^1.0.0"
